third_party/blink/web_tests/external/wpt/gamepad/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
PASS Gamepad interface: existence and properties of interface object
PASS Gamepad interface object length
PASS Gamepad interface object name
PASS Gamepad interface: existence and properties of interface prototype object
PASS Gamepad interface: existence and properties of interface prototype object's "constructor" property
PASS Gamepad interface: existence and properties of interface prototype object's @@unscopables property
PASS Gamepad interface: attribute id
PASS Gamepad interface: attribute index
PASS Gamepad interface: attribute connected
PASS Gamepad interface: attribute timestamp
PASS Gamepad interface: attribute mapping
PASS Gamepad interface: attribute axes
PASS Gamepad interface: attribute buttons
PASS GamepadButton interface: existence and properties of interface object
PASS GamepadButton interface object length
PASS GamepadButton interface object name
PASS GamepadButton interface: existence and properties of interface prototype object
PASS GamepadButton interface: existence and properties of interface prototype object's "constructor" property
PASS GamepadButton interface: existence and properties of interface prototype object's @@unscopables property
PASS GamepadButton interface: attribute pressed
PASS GamepadButton interface: attribute touched
PASS GamepadButton interface: attribute value
PASS GamepadEvent interface: existence and properties of interface object
FAIL GamepadEvent interface object length assert_equals: wrong value for GamepadEvent.length expected 2 but got 1
PASS GamepadEvent interface object name
PASS GamepadEvent interface: existence and properties of interface prototype object
PASS GamepadEvent interface: existence and properties of interface prototype object's "constructor" property
PASS GamepadEvent interface: existence and properties of interface prototype object's @@unscopables property
PASS GamepadEvent interface: attribute gamepad
Harness: the test ran to completion.

